added requirements.txt and cleaned up a few small things in Jupyter notebook

--- a/K-means_Demonstration_for_Student_Code.ipynb
+++ b/K-means_Demonstration_for_Student_Code.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "845d95d3",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4f45a809",
    "metadata": {},
    "outputs": [
@@ -62,12 +62,12 @@
     "\n",
     "colors = ['darkgoldenrod', 'hotpink', 'navy', 'aqua', 'lime', 'olive', 'violet', 'gray', 'tan', 'firebrick']\n",
     "\n",
-    "for k, idx in enumerate(k_values):\n",
+    "for k, color in zip(k_values, colors):\n",
     "    current_df = df[df['k'] == k]\n",
-    "    plt.scatter(current_df[\"x\"], current_df[\"y\"], color=colors[idx])\n",
+    "    plt.scatter(current_df[\"x\"], current_df[\"y\"], color=color)\n",
     "\n",
-    "plt.title(f\"K means for k = {len(k_values)}\", size=\"x-large\")\n",
     "plt.rcParams[\"figure.figsize\"] = [10, 8]\n",
+    "plt.title(f\"K means for k = {len(k_values)}\", size=\"x-large\")\n",
     "plt.grid()\n",
     "plt.show()"
    ]
