--- a/K-means_Demonstration_for_Student_Code.ipynb
+++ b/K-means_Demonstration_for_Student_Code.ipynb
@@ -5,10 +5,12 @@
    "id": "7e94d00c",
    "metadata": {},
    "source": [
-    "# Welcome! Please press shift+enter to run each cell in turn.\n",
-    "The first cell has you type in the name of your file. \n",
+    "# Welcome to this simple k-means visualization!\n",
+    "First, upload your 3-column .csv file of x-y coordinates and cluster labels using the upload button on the left. Your file should have x,y,k as the top row (no spaces), with the k column containing the cluster number of that (x,y) point. \n",
     "\n",
-    "The next cell will draw the graph. You should have k<=10."
+    "After uploading, press shift+enter to run the next cell. You'll type in the name of your file.\n",
+    "\n",
+    "After that, press shift+enter again to draw the graph."
    ]
   },
   {
@@ -21,8 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please type the name of your .csv file. It should have x,y,k as the top row, with the k column containing the cluster number of that (x,y) point \n",
-      "Also, it should be in the same directory as this script or in a folder inside this directory.TestData.csv\n"
+      "Please type the name of your .csv file.TestData.csv\n"
      ]
     }
    ],
@@ -30,14 +31,14 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "file_name = input(\"Please type the name of your .csv file. It should have x,y,k as the top row, with the k column containing the cluster number of that (x,y) point \\nAlso, it should be in the same directory as this script or in a folder inside this directory.\")\n",
+    "file_name = input(\"Please type the name of your .csv file.\" )\n",
     "\n",
     "df = pd.read_csv(\"./\"+file_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4f45a809",
    "metadata": {},
    "outputs": [
@@ -62,11 +63,12 @@
     "\n",
     "colors = ['darkgoldenrod', 'hotpink', 'navy', 'aqua', 'lime', 'olive', 'violet', 'gray', 'tan', 'firebrick']\n",
     "\n",
+    "plt.rcParams[\"figure.figsize\"] = [10, 8]\n",
+    "\n",
     "for k, color in zip(k_values, colors):\n",
     "    current_df = df[df['k'] == k]\n",
     "    plt.scatter(current_df[\"x\"], current_df[\"y\"], color=color)\n",
     "\n",
-    "plt.rcParams[\"figure.figsize\"] = [10, 8]\n",
     "plt.title(f\"K means for k = {len(k_values)}\", size=\"x-large\")\n",
     "plt.grid()\n",
     "plt.show()"
